--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,12 @@
     <!--Text to show in a toast if saving a pet was not successful-->
     <string name="toast_error_save">Error Saving Pet</string>
 
+    <!--Text to show in a toast if updating a pet was successful-->
+    <string name="toast_pet_updated">Pet Updated</string>
+
+    <!--Text to show in a toast if updating a pet was not successful-->
+    <string name="toast_error_update">Error Updating Pet</string>
+
     <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
     <string name="empty_view_title_text">It\'s a bit lonely here...</string>
 
