--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,8 @@
 
     <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
     <string name="cancel">Cancel</string>
+
+    <string name="delete_all_dialog">This will delete all pets from the database</string>
+    <string name="proceed_delete_all">Proceed</string>
+    <string name="halt_delete_all">No</string>
 </resources>
